fix: Add overflow hidden and  border radius to videowrapper

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -223,7 +223,7 @@ nav {
 @for $i from 1 through 5 {
   .share-slide {
        &:nth-of-type(#{$i}) i {
-       transform: translateX(3 * $i + rem);
+         transform: translateX(3 * $i + rem);
      }
   }
 }
@@ -339,9 +339,6 @@ input[type="range"]::-webkit-slider-thumb {
   }
   .card-body {
     padding: 0 !important;
-    iframe {
-      border-radius: 28px 28px 0 0 ;
-    }
   }
 }
 
@@ -397,9 +394,8 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .videowrapper {
-  float: none;
-  clear: both;
-  width: 100%;
+  overflow: hidden;
+  border-radius: 30px 30px 0 0;
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
